--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,10 +26,10 @@ jobs:
         run: dotnet test
         
       - name: Publish
-        run: dotnet publish -c Release -o /out
+        run: dotnet publish -c Release -o ./out
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: webapp
-          path: /out      
+          path: ./out      
